<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:background="@color/transparent"
                android:src="@drawable/back_arrow"
                android:contentDescription="@string/go_to_main_window" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/choose_song"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="400dp">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:scaleType="fitCenter"
                android:background="@color/transparent"
                android:src="@drawable/arrow_left"
                android:contentDescription="@string/prev_song"
                android:onClick="setPrevSong"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <View
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/layout_border_style" />

                <ImageButton
                    android:id="@+id/selectedSongImageButton"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/song_style"
                    android:contentDescription="@string/song_now" />

            </RelativeLayout>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:scaleType="fitCenter"
                android:background="@color/transparent"
                android:src="@drawable/arrow_right"
                android:contentDescription="@string/next_song"
                android:onClick="setNextSong"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingHorizontal="25dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/songName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/song_name"
                    android:textStyle="bold"
                    android:textSize="35sp"
                    android:textAlignment="center"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/songAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/author"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>


            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>