<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseLevelActivity"
    android:background="@color/blackBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:background="@color/transparent"
                android:src="@drawable/back_arrow"
                android:contentDescription="@string/go_to_main_window" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginVertical="10dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/songName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/song_name"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/songAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textAlignment="center"/>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <ImageButton
                android:id="@+id/levelImageButton"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:background="@drawable/song_style"
                android:contentDescription="@string/song_now" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingHorizontal="10dp"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

<!--                <Button-->
<!--                    android:id="@+id/level1"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="60dp"-->
<!--                    android:layout_weight=".3"-->
<!--                    android:background="@drawable/button_level_style"-->
<!--                    android:text="@string/_2"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textSize="30sp"-->
<!--                    android:onClick="selectLevel"-->
<!--                    style="?android:attr/buttonBarButtonStyle" />-->

<!--                <Button-->
<!--                    android:id="@+id/level2"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="60dp"-->
<!--                    android:layout_weight=".3"-->
<!--                    android:layout_marginStart="20dp"-->
<!--                    android:background="@drawable/button_level_style"-->
<!--                    android:text="@string/_6"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textSize="30sp"-->
<!--                    android:onClick="selectLevel"-->
<!--                    style="?android:attr/buttonBarButtonStyle" />-->

                <Button
                    android:id="@+id/level1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_level_style"
                    android:text="@string/_9"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:onClick="selectLevel"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">

                <Button
                    android:id="@+id/play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_style"
                    android:text="@string/play"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_style"
                    android:text="@string/create"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>